# protoblock

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.githook/: pre-push
.github/workflows/: coverage.yml  publish.yml
docs/: architecture.md  usage.md
examples/: rpc_speed.rs
src/: lib.rs  preprocessors.rs  processor.rs  rpc.rs  runtime.rs
src/preprocessors/: batch.rs  block.rs  ordered_queue.rs  sized_queue.rs  worker.rs
src/preprocessors/worker/: batch.rs  process.rs  shared.rs  tests.rs  types.rs
src/processor/: backoff.rs  fetcher.rs  lifecycle.rs  reorg.rs  tip.rs  worker_pool.rs
src/rpc/: auth.rs  circuit_breaker.rs  client.rs  helpers.rs  metrics.rs  options.rs  payload.rs  retry.rs
src/runtime/: config.rs  fatal.rs  hooks.rs  progress.rs  protocol.rs  runner.rs  telemetry.rs
tests/: pipeline.rs
tests/pipeline/: mock_pipeline.rs  regtest_pipeline.rs  runner.rs
tests/support/: helpers.rs  mock_rpc.rs  mod.rs  regtest.rs
