[package]
name = "protoblock"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.21"
bitcoin = "0.31"
bytes = "1.5"
futures = "0.3"
hex = "0.4"
jsonrpsee = { version = "0.22", features = ["http-client", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
once_cell = "1.19"
tempfile = "3.10"
indicatif = "0.17"
